--- a/src/app.pcss
+++ b/src/app.pcss
@@ -5,10 +5,6 @@
 .form-group {
 	@apply mb-5 flex flex-col;
 
-	&:has(input[type='checkbox']) {
-		@apply inline-flex flex-row;
-	}
-
 	.label {
 		@apply flex gap-1 mb-[3px] ml-[2px]
         font-medium text-xs text-gray-400 uppercase;
@@ -26,12 +22,22 @@
 			outline: none;
 		}
 	}
+
 	input[type='color'] {
 		@apply py-[2px] px-[3px];
 	}
+
 	input[type='checkbox'] {
 		@apply order-first h-auto w-auto mr-1;
 	}
+	&:has(input[type='checkbox']) {
+		@apply inline-flex flex-row;
+
+		.label {
+			@apply mb-0;
+		}
+	}
+
 	textarea {
 		height: 200px;
 	}
